# civic-dashboard

./: Civic Dashboard.drawio  README.md  pyproject.toml
.github/: test-helm.yml
.github/workflows/: push-and-test.yml  push-images-main.yml  push-images-pr.yml  push-images.yml  test-helm.yml
civic-dashboard/: values.yaml
civic-dashboard/scripts/: test.bash
civic-dashboard/templates/: app-configmap.yaml
civic-dashboard/templates/data-fetcher/: deployment.yaml
civic-dashboard/templates/data-store/: deployment.yaml
civic-dashboard/templates/kibana/: configmap.yaml  deployment.yaml  service.yaml
civic-dashboard/templates/sync-elastic/: deployment.yaml
services/data-fetcher/: Dockerfile  pyproject.toml
services/data-store/: Dockerfile  pyproject.toml
services/search-web-client/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
services/search-web-client/src/app/: layout.tsx  page.tsx
services/search-web-client/src/app/api/search/full/: route.ts
services/search-web-client/src/app/api/search/suggestions/: route.ts
services/search-web-client/src/app/components/: FullSearchResults.tsx  Loading.tsx  SearchBar.tsx  server-page.tsx
services/search-web-client/src/services/: SearchResultParser.ts  logger.ts
services/search-web-client/src/services/clients/: elastic-index-settings.ts  elasticsearch-client.ts  redis-client.ts
services/search-web-client/src/styles/: fonts.css  globals.css
services/sync-elastic/: Dockerfile  README.md  pyproject.toml
