[tool.poetry]
name = "data-fetcher"
version = "0.1.0"
description = ""
authors = ["Michael Korabelnikov <korabel@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
logging = "^0.4.9.6"
requests = "^2.32.3"
flask = "^3.0.3"
gunicorn = "^23.0.0"

[tool.poetry.scripts]
py-version = "python --version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
